os/bluestore: add boundary for cache-autotune related settings

E.g., because user configures something wrong or we don't expected.

Fixes: http://tracker.ceph.com/issues/37507
Signed-off-by: xie xingguo <xie.xingguo@zte.com.cn>
(cherry picked from commit c2c9245ee63cb135020061d90822745d91bb962d)